# openverba

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-LICENSES.md  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: COMPETITIVE-GAPS.md  PRODUCTION_PLAN.md  STREAMING_DESIGN.md
packaging/: installer.iss  version_info.txt  voiceflow.spec
packaging/linux/: build_appimage.sh  voiceflow.desktop
packaging/macos/: Info.plist.md  entitlements.plist
scripts/: build.bat  make_manifest.py  run_dev.bat
src/voiceflow/: __init__.py  __main__.py  _cuda_shim.py  ai.py  ai_setup.py  app.py  bugreport.py  cli.py  commands.py  config.py  constants.py  cuda.py  debuglog.py  engine.py  file_transcribe.py  hardware.py  history.py  learn.py  models.py  modes.py  snippets.py  streaming.py  transcribe.py  triggers.py  updater.py
src/voiceflow/platform/: __init__.py  base.py  linux_common.py  linux_wayland.py  linux_x11.py  macos.py  windows.py
src/voiceflow/ui/: __init__.py  _logo.py  autostart.py  dashboard.py  file_transcriber_view.py  first_run.py  history_view.py  main_window.py  onboarding.py  overlay.py  settings.py  theme.py  tray.py  trigger_picker.py  widgets.py
tests/: conftest.py  test_ai.py  test_ai_cleanup.py  test_bugreport.py  test_commands.py  test_config.py  test_cuda.py  test_dictation.py  test_engine_fallback.py  test_file_transcribe.py  test_hardware.py  test_history.py  test_history_view.py  test_kbd_hook.py  test_learn.py  test_models.py  test_modes.py  test_multichord.py  test_overlay.py  test_platform_factory.py  test_settings_status.py  test_snippets.py  test_streaming.py  test_taphold.py  test_transcribe.py  test_updater.py
website/: 404.html  accessibility.html  index.html  latest.json  opensop.css  opensop.html  privacy.html  robots.txt  script.js  site.webmanifest  sitemap.xml  style.css  terms.html  vercel.json
website/assets/: og-card.html
