[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voiceflow"
dynamic = ["version"]
description = "Free, offline, local speech-to-text dictation for your desktop."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["speech-to-text", "dictation", "whisper", "offline", "local"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# APPLICATION -> floored ranges here; exact versions live in the lockfile.
#
# NOTE: this set reflects VoiceFlow's *verified* Windows implementation, which
# uses the `keyboard` + `mouse` libraries (MIT) and `pywin32` for the trigger
# hooks, SendInput paste, and all-format clipboard save/restore -- NOT pynput.
# The platform-abstraction layer keeps the door open to swap these per-OS later
# (the plan's pynput/evdev path is for the macOS/Linux backends), but the
# Windows backend's hard-won behaviour is preserved as-is, so its real deps are
# declared here.
dependencies = [
  "faster-whisper>=1.1",     # MIT (pulls CTranslate2 MIT, av, huggingface-hub, tokenizers, onnxruntime)
  "ctranslate2>=4.5",        # MIT — CPU baseline; GPU build uses on-demand CUDA wheels
  "customtkinter>=5.2",      # MIT
  "darkdetect>=0.8",         # MIT — ctk runtime dep, must be explicit for PyInstaller
  "sounddevice>=0.5",        # MIT (mic capture; bundles PortAudio)
  "numpy>=1.26",
  "huggingface-hub>=0.24",   # explicit: first-run download UX
  "platformdirs>=4.2",       # per-OS cache/config dirs (used by the cross-platform plan)
  "packaging>=24.0",         # version compare for the updater
  "requests>=2.32",          # updater (GitHub Releases API)
  # --- Windows trigger / clipboard / tray stack (the verified backend) ---
  "keyboard>=0.13; sys_platform == 'win32'",   # MIT — keyboard-combo triggers (suppression)
  "mouse>=0.7; sys_platform == 'win32'",       # MIT — mouse helper (our own WH_MOUSE_LL hook does suppression)
  "pyperclip>=1.8; sys_platform == 'win32'",   # MIT — clipboard text fallback
  "pywin32>=306; sys_platform == 'win32'",     # PSF — win32clipboard (all-format), SendInput, win32 APIs
  "pystray>=0.19; sys_platform == 'win32'",    # tray icon (background runtime)
  "pillow>=10.0; sys_platform == 'win32'",     # tray icon images / assets
]

[project.optional-dependencies]
# User opt-in; NEVER bundled. NVIDIA GPU runtime (Windows + Linux).
gpu = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12==9.*"]
# Better hardware detection (graceful-degradation: falls back to nvidia-smi /
# stdlib / ctypes probes when absent).
hw = ["psutil>=5.9", "nvidia-ml-py>=12.0"]
# macOS accelerated backend (optional power-user path, future).
macos-metal = ["pywhispercpp>=1.3"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
  "mypy>=1.13",
  "pre-commit>=4",
  "pyinstaller>=6.11",
]

[project.urls]
Homepage = "https://github.com/BigAirHeatandAC/openverba"
Repository = "https://github.com/BigAirHeatandAC/openverba"
Issues = "https://github.com/BigAirHeatandAC/openverba/issues"
Changelog = "https://github.com/BigAirHeatandAC/openverba/blob/main/CHANGELOG.md"

# GUI launcher -> NO console window on Windows.
[project.gui-scripts]
voiceflow = "voiceflow.app:main"

# Headless/debug CLI (console attached).
[project.scripts]
voiceflow-cli = "voiceflow.cli:main"

[tool.hatch.version]
path = "src/voiceflow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceflow"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true     # customtkinter, keyboard, mouse, pywin32 lack full stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
